After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737377 - ifcfg-rh: fix handling VLAN connections as bond/bridge slaves
ifcfg-rh: fix handling VLAN connections as bond/bridge slaves
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-09-25 16:29 UTC by Jiri Klimes
Modified: 2014-09-26 14:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jiri Klimes 2014-09-25 16:29:38 UTC
When a VLAN is added to a bridge, the corresponding ifcfg file being written is wrong, because MASTER is put there, which denotes a bond slave.

Fix in branch: jk/ifcfg-rh-vlan
Comment 1 Dan Winship 2014-09-25 16:43:44 UTC
Doh, that's actually a remnant from when we thought VLANs were going to sometimes use MASTER to refer to their parent device. For actual bonds-of-vlans support, it should just be calling check_if_bond_slave() there (and probably check_if_team_slave() too).

There are some other crufty bits too. In make_vlan_setting():

>			/* format like vlan43; PHYSDEV or MASTER must be set */

drop "or MASTER"

>	if (out_master)
>		*out_master = svGetValue (ifcfg, "MASTER", FALSE);

drop that. (And actually, the "out_master" argument to the function.)
Comment 2 Jiri Klimes 2014-09-26 09:07:50 UTC
You are right. I have fixed that and pushed to master:
accaedb ifcfg-rh: fix handling VLAN connections as bond/bridge slaves (bgo #737377)
Comment 3 Dan Williams 2014-09-26 14:21:39 UTC
Although, can VLANs be bond slaves too?  Eg, can you have bond0 that includes eth0.1 and eth1.1?  Or is the correct way to do this to bond eth0 and eth1, and then create bond0.1?
Comment 4 Dan Williams 2014-09-26 14:55:41 UTC
(In reply to comment #3)
> Although, can VLANs be bond slaves too?  Eg, can you have bond0 that includes
> eth0.1 and eth1.1?  Or is the correct way to do this to bond eth0 and eth1, and
> then create bond0.1?

Nevermind, I see what you're doing here now :)