ifcfg-rh: fix handling VLAN connections as bond/bridge slaves (bgo #737377)

MASTER=something denotes a bond slave. Thus we cannot write it for VLAN
setting. When reading, set the correct 'bond' slave type, not 'vlan'.

https://bugzilla.gnome.org/show_bug.cgi?id=737377